src/objects/CSV_Upload__c.object
<CustomObject>
    <description>This is the object that saves the CSV upload attempts by super users.</description>
    <fields>
        <fullName>Apex_Batch_Id__c</fullName>
        <description>This is the Salesforce ID for the corresponding batch job for this upload attempt.</description>
        <externalId>true</externalId>
        <label>Apex Batch Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Processing_Status__c</fullName>
        <description>This is the batch status for this CSV upload item.</description>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recipient_Type__c</fullName>
        <label>Recipient Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Organisation</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Records_Created_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of records inserted in by this csv upload process.</description>
        <inlineHelpText>Total number of records inserted in by this csv upload process.</inlineHelpText>
        <label>Records Created Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Records_Updated_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of records updated in by this csv upload process.</description>
        <inlineHelpText>Total number of records updated in by this csv upload process.</inlineHelpText>
        <label>Records Updated Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Attachment_Id__c</fullName>
        <description>This is the id of the attachment that will be used to be uploaded.</description>
        <inlineHelpText>This is the id of the attachment that will be used to be uploaded.</inlineHelpText>
        <label>Source Attachment Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Total_Records_Failed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the total number of records failed the upload process.</description>
        <label>Total Records Failed</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Records_Processed_Without_Error__c</fullName>
        <description>This is the total number of records that have been processed without any error.</description>
        <formula>Records_Created_Count__c +   Records_Updated_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the total number of records that have been processed without any error.</inlineHelpText>
        <label>Total Records Processed Without Error</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Records_To_Be_Processed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of records processed for this CSV upload</description>
        <label>Total Records To Be Processed</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This is the process type for this data upload.</description>
        <inlineHelpText>This is the process type for this data upload.</inlineHelpText>
        <label>Type</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_Status__c</fullName>
        <description>This is the status of the upload process.</description>
        <formula>IF(
 ISPICKVAL(Processing_Status__c, &quot;Finished&quot;),
 IF(
  Total_Records_Failed__c == 0,
  &quot;Upload Successful&quot;,
  IF(
   AND(Total_Records_To_Be_Processed__c  &gt; 0, Total_Records_To_Be_Processed__c ==  Total_Records_Failed__c),
   &quot;All records failed&quot;,
   &quot;Upload with Errors&quot;
  )
 )
 + &quot; &quot; + 
 IMAGE( 
  IF(
   Total_Records_Failed__c == 0,
   &quot;/img/samples/flag_green.gif&quot;,
   IF(
    AND(Total_Records_To_Be_Processed__c  &gt; 0, Total_Records_To_Be_Processed__c ==  Total_Records_Failed__c),
    &quot;/img/samples/flag_red.gif&quot;,
    &quot;/img/samples/flag_yellow.gif&quot;
   )
  ),
  &quot;Upload Process&quot;
 )
 , &quot;In Progress&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the status of the upload process.</inlineHelpText>
        <label>Upload Status</label>
        <type>Text</type>
    </fields>
    <label>Data Upload</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Recipient_Type__c</columns>
        <columns>Upload_Status__c</columns>
        <columns>Processing_Status__c</columns>
        <columns>Total_Records_Failed__c</columns>
        <columns>Total_Records_To_Be_Processed__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Uploads</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Recipient_Type__c</columns>
        <columns>Upload_Status__c</columns>
        <columns>Processing_Status__c</columns>
        <columns>Total_Records_Failed__c</columns>
        <columns>Total_Records_To_Be_Processed__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Uploads</label>
    </listViews>
    <nameField>
        <displayFormat>CSVU-{0000000}</displayFormat>
        <label>FileUpload Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Uploads</pluralLabel>
    <recordTypes>
        <fullName>Grant_Award</fullName>
        <active>true</active>
        <description>All the data upload processes related to Grant Award changes</description>
        <label>Grant Award</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>